--- a/Android_App/HealthApp2/app/src/main/res/values/strings.xml
+++ b/Android_App/HealthApp2/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">HealthApp2</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">send</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
